[gd_scene load_steps=9 format=3 uid="uid://di2us67ysjn03"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_d38il"]
[ext_resource type="Texture2D" uid="uid://bqjkkhfi7xp6k" path="res://assets/sprites/ball/tennis-0002.png" id="2_gm8o1"]
[ext_resource type="Texture2D" uid="uid://6f2xoiw1gbdv" path="res://assets/sprites/ball/tennis-0003.png" id="3_ojhxd"]
[ext_resource type="Texture2D" uid="uid://ckvnt851cw2" path="res://assets/sprites/ball/tennis-0004.png" id="4_0inyr"]
[ext_resource type="Texture2D" uid="uid://d145lo4sbhp0h" path="res://assets/sprites/ball/tennis-0005.png" id="5_fy660"]
[ext_resource type="Texture2D" uid="uid://u4bg5dqfkpca" path="res://assets/sprites/court/tennis-court-0001.png" id="6_81qil"]
[ext_resource type="Script" path="res://scripts/ScoreboardControl.gd" id="7_te8ay"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p0dke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gm8o1")
}, {
"duration": 1.0,
"texture": ExtResource("3_ojhxd")
}, {
"duration": 1.0,
"texture": ExtResource("4_0inyr")
}, {
"duration": 1.0,
"texture": ExtResource("5_fy660")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}]

[node name="Main" type="Node2D"]
script = ExtResource("1_d38il")

[node name="TennisBallAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 1
position = Vector2(354, 113)
sprite_frames = SubResource("SpriteFrames_p0dke")
animation = &"fly"

[node name="CounterLabel" type="Label" parent="."]
offset_left = 113.0
offset_top = 72.0
offset_right = 153.0
offset_bottom = 95.0

[node name="TennisCourtSprite2D" type="Sprite2D" parent="."]
position = Vector2(326, 240)
scale = Vector2(2.14063, 2.61719)
texture = ExtResource("6_81qil")

[node name="ResetButton" type="Button" parent="."]
offset_left = 71.0
offset_top = 227.0
offset_right = 122.0
offset_bottom = 258.0
text = "Reset"

[node name="ScoreboardControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_te8ay")

[node name="FirstPlayerScoreLabel" type="Label" parent="ScoreboardControl"]
layout_mode = 0
offset_left = 64.0
offset_top = 126.0
offset_right = 104.0
offset_bottom = 149.0

[node name="SecondPlayerScoreLabel" type="Label" parent="ScoreboardControl"]
layout_mode = 0
offset_left = 62.0
offset_top = 97.0
offset_right = 102.0
offset_bottom = 120.0

[node name="OutcomeRichTextLabel" type="RichTextLabel" parent="."]
offset_left = 456.0
offset_top = 48.0
offset_right = 622.0
offset_bottom = 181.0

[connection signal="pressed" from="ResetButton" to="." method="_on_btn_reset_pressed"]
